# ha_nwp500

./: .bumpversion.cfg  .coveragerc  .gitignore  CHANGELOG.md  COMPONENT_OVERVIEW.md  DEVELOPMENT.md  INFO.md  INSTALLATION.md  LICENSE  MIGRATION_SUMMARY_v2.0.0.md  PYRIGHT_SETUP.md  README.md  RELEASING.md  TESTING.md  UPDATE_1.2.0_SUMMARY.md  UPGRADE_SUMMARY.md  compose.yaml  debug_library_source.py  hacs.json  inspect_nwp500.py  inspect_nwp500_modules.py  inspect_nwp500_temp.py  inspect_nwp500_unit.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  tox.ini  validate_hacs.py
.devcontainer/: .gitignore  Dockerfile  README.md  devcontainer.json
.github/: CI.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  hacs.yaml  hacs.yml  release.yml
.zed/: settings.json
blueprints/automation/: nwp500_away_mode.yaml  nwp500_demand_response.yaml  nwp500_leak_alert.yaml  nwp500_scheduled_setpoint.yaml  nwp500_solar_boost.yaml
custom_components/nwp500/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  mqtt_manager.py  number.py  sensor.py  services.yaml  strings.json  switch.py  water_heater.py
custom_components/nwp500/translations/: en.json  strings.json
custom_components/nwp500/www/: nwp500-schedule-card.js  nwp500-visual-card.js
nwp500/: __init__.py  binary_sensor.py  const.py  number.py  water_heater.py
scripts/: README.md  check_deprecated_apis.py  release.sh  update_nwp500_version.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_binary_sensor.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_dynamic_limits.py  test_entity.py  test_init.py  test_mqtt_manager.py  test_number.py  test_sensor.py  test_services.py  test_switch.py  test_water_heater.py
