[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle (PEP 257)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "ISC",    # flake8-implicit-str-concat
    "S",      # bandit (security)
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "E501",   # Line too long (we handle this with line-length)
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101"]
"custom_components/nwp500/const.py" = ["S105"]
"scripts/**/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
]
"custom_components/nwp500/__init__.py" = [
    "D104",  # Missing docstring in public package
]

[tool.pytest.ini_options]
# Test discovery patterns
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["tests"]
minversion = "7.0"
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = [
    "-v",
    "-l",
    "-ra",
    "-W",
    "default",
    "--cov=custom_components.nwp500",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test component interactions",
    "slow: Tests that take a long time to run",
    "network: Tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
files = ["custom_components/nwp500", "scripts"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
disallow_any_generics = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

["tool.mypy-homeassistant.*"]
ignore_missing_imports = true

["tool.mypy-nwp500.*"]
ignore_missing_imports = true

["tool.mypy-awsiotsdk.*"]
ignore_missing_imports = true

["tool.mypy-awscrt.*"]
ignore_missing_imports = true

["tool.mypy-voluptuous.*"]
ignore_missing_imports = true

["tool.mypy-custom_components.nwp500.const"]
disallow_untyped_defs = true
disallow_any_generics = true

["tool.mypy-custom_components.nwp500.entity"]
disallow_untyped_defs = true

["tool.mypy-custom_components.nwp500.config_flow"]
disallow_untyped_defs = true

[tool.coverage.run]
source = ["custom_components/nwp500"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.tox/*",
    "*/.venv/*",
    "*/coordinator.py",
    "*/diagnostics.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "if self\\.debug",
    "except Exception",
    "\\.\\.\\.",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
